# syma

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  sym-lang.md  syma-lang.md  syma.toml
.github/workflows/: ci.yml
examples/: 02-functions.syma  05-map-fold-select.syma  06-patterns-and-rules.syma  07-math.syma  08-real-world.syma  09-monte-carlo-pi.syma  10-pi-series.syma  11-newtons-method.syma  12-numerical-integration.syma  13-taylor-series.syma  14-modules.syma  15-oop.syma
examples/advanced/: 01-modules.syma  02-oop.syma  03-banking.syma  04-expression.syma  05-graph.syma
examples/applied/: 01-real-world.syma
examples/basics/: 01-basics.syma  03-lists.syma  04-control-flow.syma
examples/functional/: 01-map-fold-select.syma  02-patterns-and-rules.syma
examples/math/: 01-trig-and-log.syma  02-pi-series.syma  03-newtons-method.syma  04-numerical-integration.syma  05-taylor-series.syma  06-monte-carlo-pi.syma  07-feigenbaum.syma
gui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: convert_rubi_rules.py
src/: ast.rs  builtins.rs  cli.rs  debug.rs  env.rs  eval.rs  format.rs  kernel.rs  lexer.rs  lib.rs  main.rs  manifest.rs  messages.rs  parser.rs  pattern.rs  polynomial.rs  profiler.rs  server.rs  value.rs
src/builtins/: D.syma  algebraic.rs  arithmetic.rs  attributes.rs  (+40 more)
tests/: arithmetic_extended.rs  association.rs  attributes.rs  calculus.rs  calendar.rs  clearing.rs  cli.rs  combinatorics.rs  comparison.rs  discrete.rs  edge_cases.rs  format_display.rs  functional_ops.rs  list.rs  list_extended.rs  math_extended.rs  number_theory.rs  pattern_extended.rs  rubi_integration.rs  string.rs  string_extended.rs  symbolic.rs
(+67 files in other folders)
