[package]
name = "syma"
version = "0.1.0"
edition = "2024"

[lib]
name = "syma"
path = "src/lib.rs"

[features]
default = []
rubi = []

[dependencies]
rug = "1.29"
rustyline = "18.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
futures-util = "0.3"
