[package]
name = "syma"
version = "0.1.0"
edition = "2024"

[lib]
name = "syma"
path = "src/lib.rs"

[features]
default = []
jit = ["cranelift", "cranelift-module", "target-lexicon", "libc"]

[dependencies]
fastrand = "2"
unicode_categories = "0.1"
rug = "1.29"
image = { version = "0.25", default-features = false, features = ["png"] }
rustyline = "18.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cranelift = { version = "0.118", optional = true }
cranelift-module = { version = "0.118", optional = true }
target-lexicon = { version = "0.13", optional = true }
libc = { version = "0.2", optional = true }
